'contain:size' breaks 'object-fit' https://bugs.webkit.org/show_bug.cgi?id=276681 <rdar://problem/131866042>

Reviewed by Antti Koivisto and Tim Nguyen.

This change aligns WebKit with https://github.com/w3c/csswg-drafts/issues/10116 resolution:

"'contain' removes the natural aspect ratio / width / height only for
the purposes of sizing and layout of the box (and object-fit is
therefore not affected)".

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::paint):

Canonical link: https://commits.webkit.org/289287@main